added required attributes moved UI control to controller